# education_platform

./: .gitignore  pyproject.toml
edu_platform/edu_platform/: asgi.py  settings.py  urls.py  wsgi.py
edu_platform/mentorship/: models.py
edu_platform/testing_system/: models.py
