[tool.poetry]
name = "Edu-Platform"
version = "0.1.0"
description = ""
authors = ["Evgeny <ytrokinterteiment@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.1"
pre-commit = "^3.0.4"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"